[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/song_select/banner.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/song_select/song_button.gd" type="Script" id=2]

[node name="SongButton" type="Button"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -720.0
margin_bottom = 130.0
theme_type_variation = "_Song"
script = ExtResource( 2 )

[node name="Organizer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 10.0
margin_bottom = -10.0

[node name="Rank" type="TextureRect" parent="Organizer"]
margin_right = 100.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 0 )
expand = true
stretch_mode = 6

[node name="Info" type="VBoxContainer" parent="Organizer"]
margin_left = 104.0
margin_right = 136.0
margin_bottom = 110.0
theme_type_variation = "SeparationP00"

[node name="SongInfo" type="Label" parent="Organizer/Info"]
margin_right = 32.0
margin_bottom = 34.0
theme_type_variation = "FontRegular025"

[node name="ChartInfo" type="Label" parent="Organizer/Info"]
margin_top = 34.0
margin_right = 32.0
margin_bottom = 68.0
theme_type_variation = "FontRegular025"

[node name="Banners" type="HBoxContainer" parent="Organizer/Info"]
margin_top = 68.0
margin_right = 32.0
margin_bottom = 110.0
size_flags_vertical = 3
theme_type_variation = "SeparationP08"

[node name="Rating" parent="Organizer/Info/Banners" instance=ExtResource( 1 )]
self_modulate = Color( 0.435294, 0.423529, 0.956863, 1 )
margin_top = 12.0
margin_bottom = 42.0

[node name="Status" parent="Organizer/Info/Banners" instance=ExtResource( 1 )]
self_modulate = Color( 0.368627, 0.631373, 0.858824, 1 )
margin_left = 14.0
margin_top = 12.0
margin_right = 20.0
margin_bottom = 42.0

[node name="VSeparator" type="VSeparator" parent="Organizer/Info/Banners"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 28.0
margin_top = 12.0
margin_right = 32.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 2
size_flags_vertical = 8
